@@ -5,6 +5,8 @@ Nagios Change Log
 
 2.0a1 - ??/??/????
 ------------------
+* Added regexp matching in object config files (with --enable-regexp-matching
+  option to configure script)
 * Changed default name of status, comment, downtime, and retention files
 * Removed DB support for extended data and retention data
 * Multiple service descriptions can be used in both service dependency
